--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,6 @@ body {
 
 .hero {
     font-family: 'Workbench', sans-serif;
-    /* font-size: larger; */
-    /* background: url('your-background-image.jpg') center/cover no-repeat; */
     height: 60vh;
     display: flex;
     align-items: center;
@@ -45,7 +43,7 @@ body {
 .navbar {
     margin-top: 2px;
     font-family: 'EB Garamond', serif;
-    background-color:rgb(177, 148, 112);
+    background-color: rgb(29, 28, 28);
 }
 
 .navbar ul {
@@ -66,7 +64,8 @@ body {
 }
 
 .about-section, .resume-section, .portfolio-section, .blog-section, .contact-section {
-    background-color:rgb(248, 250, 229);
+    background-color:rgb(29, 28, 28);
+    color: whitesmoke;
     /* border-radius: 10px; */
     /* box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); */
     margin-bottom: 2px;
@@ -76,22 +75,18 @@ body {
     font-size: 20px;
 }
 
-.about-section h2, .resume-section h2, .portfolio-section h2, .blog-section h2, .contact-section h2 {
-    color: #333;
+.about-section h2, .resume-section h2, .portfolio-section h2, .blog-section h2, .contact-section h2 , .social-section h2{
+    color: whitesmoke;
 }
 
 .footer {
     font-family: 'EB Garamond', serif;
-    background-color:rgb(177, 148, 112);
+    background-color:rgb(29, 28, 28);
     color: #fff;
     text-align: center;
     padding: 10px 0;
 }
 
-.heart-icon {
-    color: red;
-    vertical-align: middle;
-}
 
 img{
     transition: transform 0.3s ease-in-out;
@@ -100,7 +95,8 @@ img:hover{
     transform: scale(1.15);
 }
 .social-section {
-    background-color: rgb(248, 250, 229);
+    background-color: rgb(29, 28, 28);
+    color: whitesmoke;
     /* border-radius: 10px; */
     /* box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); */
     padding: 40px;
@@ -108,13 +104,11 @@ img:hover{
     font-size: 20px;
 }
 
-.social-section h2 {
-    color: #333;
-}
+
 
 .social-section p {
     margin-bottom: 20px;
-    color: #555;
+    color: whitesmoke;
 }
 
 .social-links {
@@ -135,5 +129,5 @@ img:hover{
 }
 
 .social-links a:hover {
-    color: #0056b3; /* Change link color on hover */
+    color: #0056b3; 
 }
